@@ -1,5 +1,11 @@
 2004-11-15	Benedikt Meurer <benny@xfce.org>
 
+	* terminal/terminal-preferences-dialog.c, terminal/terminal-window.c:
+	  Made the Preferences dialog and the `Set Title' dialog properly
+	  accessible.
+
+2004-11-15	Benedikt Meurer <benny@xfce.org>
+
 	* Terminal.ui: Removed close-tab from the default right-click
 	  menu.
 	* terminal/terminal-toolbars-view.c: Added a right-click menu
